Tue Apr 27 12:45:47 GMT 2010  Olly Betts <olly@survex.com>

	* AUTHORS,NEWS,configure.ac: Update for 1.0.20.

Tue Apr 27 12:12:33 GMT 2010  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Tue Apr 27 12:09:04 GMT 2010  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* examples/delve.cc: Add -a option to list all terms in a database.
	* examples/delve.cc: Update --help output for -v to cover all terms
	  case.

Tue Apr 27 12:08:24 GMT 2010  Olly Betts <olly@survex.com>

	* common/getopt.cc,common/gnu_getopt.h: Fix getopt backport to remove
	  two changes added for testing.

Mon Apr 26 13:40:08 GMT 2010  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* matcher/multimatch.cc: Fix bug related to ticket#464 (the previous
	  fix doesn't fix some similar cases).
	* tests/api_backend.cc: Add regression test msize2.

Mon Apr 26 11:37:44 GMT 2010  Olly Betts <olly@survex.com>

	* Backport changes from trunk:
	* common/getopt.cc,common/gnu_getopt.h: Revert previous 2
	  getopt-related patches.  The latest state was breaking on Solaris
	  which (contrary to what its man pages say) prototypes getopt() stuff
	  in stdlib.h.  This seems to be a rabbit hole we don't want to head
	  further down.
	* common/getopt.cc,common/gnu_getopt.h: On Cygwin, #include <getopt.h>
	  for declarations of optind, etc rather than providing our own
	  declarations.  Should fix warnings in Cygwin build reported by Reini
	  Urban on xapian-devel list.

Thu Apr 22 05:53:30 GMT 2010  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Tue Apr 20 15:20:09 GMT 2010  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* docs/deprecation.rst: Note how to disable deprecation warnings.

Tue Apr 20 09:27:48 GMT 2010  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* api/omenquire.cc,matcher/multimatch.cc: Fix incorrect estimate and
	  bounds on matches when sorting and collapsing in a particular case
	  (ticket#464).