@@ -161,7 +161,11 @@ FlintCursor::next()
     if (B->cursor_version != version) {
 	// find_entry() will call rebuild().
 	(void)find_entry(current_key);
-    } else if (tag_status == UNREAD) {
+	// If the key was found, we're now pointing to it, otherwise we're
+	// pointing to the entry before.  Either way, we now want to move to
+	// the next key.
+    }
+    if (tag_status == UNREAD) {
 	while (true) {
 	    if (! B->next(C, 0)) {
 		is_positioned = false;
