@@ -1,3 +1,14 @@
+Wed May 05 06:37:56 GMT 2010  Olly Betts <olly@survex.com>
+
+	* Backport changes from trunk:
+	* backends/flint/flint_cursor.cc,backends/quartz/bcursor.cc:
+	  If we have to rebuild the cursor on next() because the table changed
+	  underneath us, we need to advance it because find_entry() will put
+	  the cursor on the entry we were already on, or the one before if the
+	  entry we were on has been removed.  Bug uncovered by notmuch
+	  testsuite, but I'm unable to reduce it to a sane testcase for our
+	  testsuite.  (Debian#579951)
+
 Tue Apr 27 12:45:47 GMT 2010  Olly Betts <olly@survex.com>
 
 	* AUTHORS,NEWS,configure.ac: Update for 1.0.20.
